--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,9 +2,9 @@
 
 
 <ion-tabs>
-  <ion-tab tabIcon="หน้าหลัก" [root]="tab1Root" tabIcon="heart" tabTitle="Tab1"></ion-tab>
-  <ion-tab tabIcon="คอร์ส" [root]="tab2Root" tabTitle="Tab2"></ion-tab>
-  <ion-tab tabIcon="บริการ" [root]="tab3Root" tabTitle="Tab3"></ion-tab>
-  <ion-tab tabIcon="บทความ" [root]="tab4Root" tabTitle="Tab4"></ion-tab>
-  <ion-tab tabIcon="ติดต่อ" [root]="tab5Root" tabTitle="Tab5"></ion-tab>
+  <ion-tab tabIcon="home" [root]="tab1Root"  tabTitle="หน้าหลัก"></ion-tab>
+  <ion-tab tabIcon="book" [root]="tab2Root" tabTitle="คอร์ส"></ion-tab>
+  <ion-tab tabIcon="heart" [root]="tab3Root" tabTitle="บริการ"></ion-tab>
+  <ion-tab tabIcon="chatboxes" [root]="tab4Root" tabTitle="บทความ"></ion-tab>
+  <ion-tab tabIcon="contact" [root]="tab5Root" tabTitle="ติดต่อ"></ion-tab>
 </ion-tabs>
